force-app/main/default/objects/Customer_Order_Inventory_Daily__c/Customer_Order_Inventory_Daily__c.object-meta.xml
<CustomObject>
    <label>Customer Order Inventory Daily</label>
    <nameField>
        <displayFormat>COIN-{00000000}</displayFormat>
        <label>Customer Order Inventory Daily Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Inventory Daily</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>