force-app/main/default/objects/Customer_Order_Inventory_Daily__c/fields/Customer_Order_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Inventory__c</fullName>
    <label>Customer Order Inventory</label>
    <referenceTo>Customer_Order_Inventory__c</referenceTo>
    <relationshipLabel>Customer Order Inventory Daily</relationshipLabel>
    <relationshipName>Customer_Order_Inventory_Daily</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>