force-app/main/default/objects/Customer_Order_Inventory_Daily__c/fields/Daily_Sales__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales__c</fullName>
    <label>Daily Sales</label>
    <referenceTo>Retail_Number__c</referenceTo>
    <relationshipLabel>Customer Order Inventory Daily</relationshipLabel>
    <relationshipName>Customer_Order_Inventory_Daily</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>