force-app/main/default/objects/Customer_Order_Inventory_Daily__c/fields/Exceed__c.field-meta.xml
<CustomField>
    <fullName>Exceed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exceed</label>
    <type>Checkbox</type>
</CustomField>