force-app/main/default/objects/Customer_Order_Inventory_Daily__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Order_Inventory__c</columns>
    <columns>Daily_Sales__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>